Fix doc menu on mobile

--- a/site/.lunet/css/main.scss
+++ b/site/.lunet/css/main.scss
@@ -509,5 +509,8 @@ footer {
     pre.language-kalk {
         font-size: 0.75rem;
     }
-}
 
+    .menu-sidebar {
+        top: auto!important; 
+    }
+}
